swagger all project routes + added authentication req to all unprotected routes
